--- a/.github/workflows/moodle.yml
+++ b/.github/workflows/moodle.yml
@@ -32,9 +32,12 @@ jobs:
       matrix:
         include:
           - php: '8.2'
-            moodle-branch: 'MOODLE_404_STABLE'
+            moodle-branch: 'MOODLE_404_STABLE, MOODLE_405_STABLE'
             database: pgsql
           - php: '8.3'
+            moodle-branch: 'main'
+            database: pgsql
+          - php: '8.4'
             moodle-branch: 'main'
             database: pgsql
 
@@ -43,6 +46,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: plugin
+          ref: MOODLE_404_STABLE
 
       - name: Setup PHP ${{ matrix.php }}
         uses: shivammathur/setup-php@v2
