--- a/.github/workflows/moodle.yml
+++ b/.github/workflows/moodle.yml
@@ -8,7 +8,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:13
+        image: postgres
         env:
           POSTGRES_USER: 'postgres'
           POSTGRES_HOST_AUTH_METHOD: 'trust'
@@ -32,7 +32,10 @@ jobs:
       matrix:
         include:
           - php: '8.2'
-            moodle-branch: 'MOODLE_404_STABLE, MOODLE_405_STABLE'
+            moodle-branch: 'MOODLE_404_STABLE'
+            database: pgsql
+          - php: '8.3'
+            moodle-branch: 'MOODLE_405_STABLE'
             database: pgsql
           - php: '8.3'
             moodle-branch: 'main'
